[project]
name = "ezpz4u"
long_description = "A project zomboid rest api for easily managing mods and state"
long_description_content_type` = "text"
version = "0.0.1"
dependencies = [
    "requests",
    "fastapi",
    "typing",
    "pydantic",
    "python-dotenv",
    "uvicorn",
    'importlib-metadata; python_version<"3.10"',
]
[project.scripts]
ezpz4u = "pz.main:start_server"